remove side bar manually

--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,7 @@ Sidebar
   place-items: center;
   transition: var(--transition);
   /* add later */
-  /* transform: translate(-100%); */
+  transform: translate(-100%);
 }
 
 .sidebar-links {
