--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,18 @@ Navbar
     align-items: center;
   }
 }
+
+/* fixed navbar */
+
+.navbar-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--clr-white);
+  z-index: 2;
+  box-shadow: var(--light-shadow);
+}
 /*
 =============== 
 Sidebar
@@ -316,6 +328,11 @@ Sidebar
 Hero
 ===============
 */
+
+.hero {
+  background: red;
+  min-height: 130vh;
+}
 /* underline added to globals */
 
 /*
