--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@ Fonts
 Variables
 ===============
 */
-
 :root {
   /* dark shades of primary color*/
   --clr-primary-1: hsl(43, 86%, 17%);
@@ -52,7 +51,6 @@ Variables
 Global Styles
 ===============
 */
-
 *,
 ::after,
 ::before {
@@ -77,7 +75,6 @@ img:not(.nav-logo) {
   width: 100%;
   display: block;
 }
-
 h1,
 h2,
 h3,
@@ -128,7 +125,6 @@ p {
   }
 }
 /*  global classes */
-
 .btn {
   text-transform: uppercase;
   background: var(--clr-primary-5);
@@ -153,7 +149,6 @@ p {
 .section {
   padding: 5rem 0;
 }
-
 .section-center {
   width: 90vw;
   margin: 0 auto;
@@ -173,7 +168,6 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
-
 /*
 =============== 
 Navbar
@@ -208,12 +202,10 @@ Navbar
   /* justify-content:space-between */
   justify-self: end;
 }
-
 @media screen and (min-width: 768px) {
   .nav {
     background: var(--clr-primary-10);
   }
-
   .nav-btn {
     display: none;
   }
@@ -231,7 +223,6 @@ Navbar
     letter-spacing: var(--spacing);
     transition: var(--transition);
   }
-
   .nav-links a:hover {
     color: var(--clr-primary-5);
   }
@@ -241,9 +232,7 @@ Navbar
     align-items: center;
   }
 }
-
 /* fixed navbar */
-
 .navbar-fixed {
   position: fixed;
   top: 0;
@@ -258,7 +247,6 @@ Navbar
 Sidebar
 ===============
 */
-
 .sidebar {
   position: fixed;
   top: 0;
@@ -275,15 +263,12 @@ Sidebar
   /* add later */
   transform: translate(-100%);
 }
-
 .show-sidebar {
   transform: translate(0);
 }
-
 .sidebar-links {
   text-align: center;
 }
-
 .sidebar-links a {
   font-size: 2rem;
   text-transform: capitalize;
@@ -293,11 +278,9 @@ Sidebar
   display: inline-block;
   margin-bottom: 1.5rem;
 }
-
 .sidebar-links a:hover {
   color: var(--clr-primary-5);
 }
-
 .social-icons {
   display: grid;
   margin-top: 3rem;
@@ -305,17 +288,14 @@ Sidebar
   grid-template-columns: repeat(5, 1fr);
   justify-items: center;
 }
-
 .social-icon {
   font-size: 1.5rem;
   color: var(--clr-grey-1);
   transition: var(--transition);
 }
-
 .social-icon:hover {
   color: var(--clr-primary-5);
 }
-
 .close-btn {
   position: absolute;
   top: 1rem;
@@ -327,7 +307,6 @@ Sidebar
   color: #bb2525;
   cursor: pointer;
 }
-
 .close-btn:hover {
   color: #e66b6b;
 }
@@ -336,37 +315,59 @@ Sidebar
 Hero
 ===============
 */
-
 /* underline added to globals */
 .hero .underline {
   margin-bottom: 0.5rem;
   margin-left: 0;
 }
-
 .hero-img {
   display: none;
 }
-
 .hero {
   background: var(--clr-primary-10);
 }
-
 .hero-center {
   min-height: calc(100vh - 5rem);
   display: grid;
   place-items: center;
 }
-
 .hero-info h4 {
   color: var(--clr-grey-5);
 }
 .hero-icons {
   justify-items: start;
 }
-
 .hero-btn {
   margin-top: 1.25rem;
 }
+
+@media screen and (min-width: 992px) {
+  .hero-img {
+    display: block;
+    position: relative;
+  }
+  .hero-center {
+    grid-template-columns: 1fr 1fr;
+  }
+  .hero-photo {
+    max-width: 25rem;
+    max-height: 30rem;
+    object-fit: cover;
+    border-radius: var(--radius);
+    position: relative;
+  }
+  .hero-img::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 0.25rem solid var(--clr-primary-5);
+    top: 2rem;
+    right: -2rem;
+    border-radius: var(--radius);
+  }
+}
+
 /*
 =============== 
 About
