--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,11 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
+
+.section-title {
+  margin-bottom: 4rem;
+  text-align: center;
+}
 /*
 =============== 
 Navbar
@@ -349,13 +354,7 @@ Hero
   .hero-center {
     grid-template-columns: 1fr 1fr;
   }
-  .hero-photo {
-    max-width: 25rem;
-    max-height: 30rem;
-    object-fit: cover;
-    border-radius: var(--radius);
-    position: relative;
-  }
+
   .hero-img::before {
     content: '';
     position: absolute;
@@ -368,12 +367,38 @@ Hero
   }
 }
 
+.hero-photo {
+  max-width: 25rem;
+  max-height: 30rem;
+  object-fit: cover;
+  border-radius: var(--radius);
+  position: relative;
+}
+
 /*
 =============== 
 About
 ===============
 */
 /* section title added to globals */
+
+.about-title {
+  text-align: left;
+  margin-bottom: 2rem;
+}
+
+.about-title .underline {
+  margin-left: 0;
+}
+
+.about-center {
+  display: grid;
+  gap: 3rem 2rem;
+}
+
+.about-img {
+  justify-self: center;
+}
 
 /*
 =============== 
