--- a/css/styles.css
+++ b/css/styles.css
@@ -425,8 +425,8 @@ About
 Services
 ===============
 */
-/* small screen layout setup */
 /* bg-grey in globals */
+/* small screen layout setup */
 .service {
   background: var(--clr-white);
   padding: 3rem 1.5rem;
@@ -456,6 +456,18 @@ Services
 }
 .service:hover .underline {
   background: var(--clr-white);
+}
+@media screen and (min-width: 676px) {
+  .services-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .services-center {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 /*
