--- a/css/styles.css
+++ b/css/styles.css
@@ -599,6 +599,19 @@ Connect
   object-fit: cover;
 }
 
+.connect::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background: var(--clr-primary-5); */
+  /* background: rgba(0, 0, 0, 0.6) */
+  background: var(--clr-white);
+  opacity: 0.7;
+}
+
 /*
 =============== 
 Skills
