--- a/css/styles.css
+++ b/css/styles.css
@@ -597,6 +597,7 @@ Connect
   width: 100%;
   height: 100%;
   object-fit: cover;
+  z-index: -2;
 }
 
 .connect::after {
@@ -610,6 +611,26 @@ Connect
   /* background: rgba(0, 0, 0, 0.6) */
   background: var(--clr-white);
   opacity: 0.7;
+  z-index: -1;
+}
+
+.connect {
+  display: grid;
+  place-items: center;
+}
+
+.video-banner .section-title {
+  margin-bottom: 2rem;
+}
+
+.video-text {
+  max-width: 30rem;
+}
+
+.video-banner {
+  background: var(--clr-primary-10);
+  padding: 3rem 5rem 12rem 5rem;
+  text-align: center;
 }
 
 /*
