--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,9 @@ Navbar
   height: 5rem;
   padding: 1rem;
   display: grid;
+  -webkit-box-align: center;
   align-items: center;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .nav-center {
@@ -199,6 +201,7 @@ Navbar
 .nav-header {
   display: grid;
   grid-template-columns: auto 1fr;
+  -webkit-box-align: center;
   align-items: center;
 }
 .nav-btn {
@@ -221,6 +224,8 @@ Navbar
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
     column-gap: 2rem;
     justify-self: end;
   }
@@ -229,6 +234,7 @@ Navbar
     color: var(--clr-grey-1);
     font-weight: bold;
     letter-spacing: var(--spacing);
+    -webkit-transition: var(--transition);
     transition: var(--transition);
   }
   .nav-links a:hover {
@@ -237,6 +243,7 @@ Navbar
   .nav-center {
     display: grid;
     grid-template-columns: auto 1fr;
+    -webkit-box-align: center;
     align-items: center;
   }
 }
@@ -267,11 +274,14 @@ Sidebar
   /* align-items: center;
   justify-content: center; */
   place-items: center;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   /* add later */
+  -webkit-transform: translate(-100%);
   transform: translate(-100%);
 }
 .show-sidebar {
+  -webkit-transform: translate(0);
   transform: translate(0);
 }
 .sidebar-links {
@@ -280,6 +290,7 @@ Sidebar
 .sidebar-links a {
   font-size: 2rem;
   text-transform: capitalize;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   color: var(--clr-grey-5);
   letter-spacing: var(--spacing);
@@ -299,6 +310,7 @@ Sidebar
 .social-icon {
   font-size: 1.5rem;
   color: var(--clr-grey-1);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .social-icon:hover {
@@ -311,6 +323,7 @@ Sidebar
   font-size: 3rem;
   background: transparent;
   border: transparent;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   color: #bb2525;
   cursor: pointer;
@@ -374,6 +387,7 @@ Hero
 .hero-photo {
   max-width: 25rem;
   max-height: 30rem;
+  -o-object-fit: cover;
   object-fit: cover;
   border-radius: var(--radius);
   position: relative;
@@ -433,6 +447,7 @@ Services
   margin-bottom: 2rem;
   border-radius: var(--radius);
   text-align: center;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .service-icon {
@@ -442,9 +457,11 @@ Services
 .service .underline {
   width: 3rem;
   height: 0.12rem;
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .service p {
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .service:hover {
@@ -461,6 +478,8 @@ Services
   .services-center {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
     column-gap: 2rem;
   }
 }
@@ -495,7 +514,9 @@ Projects
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   opacity: 0;
 }
@@ -510,9 +531,11 @@ Projects
 }
 
 .project-img {
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   border-radius: var(--radius);
   height: 15rem;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 
@@ -529,12 +552,14 @@ Projects
   height: 100%;
   border: 0.25rem solid var(--clr-white);
   border-radius: var(--radius);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
   opacity: 0;
 }
 
 .project:hover::after {
   opacity: 1;
+  -webkit-transform: scale(0.8);
   transform: scale(0.8);
 }
 
@@ -542,6 +567,8 @@ Projects
   .projects-center {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
     column-gap: 2rem;
   }
 }
@@ -596,6 +623,7 @@ Connect
   left: 0;
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
   object-fit: cover;
   z-index: -2;
 }
@@ -673,6 +701,8 @@ Skills
   .skills-center {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
     column-gap: 2rem;
   }
 }
@@ -722,6 +752,7 @@ Skills
   position: absolute;
   top: -2rem;
   left: 50%;
+  -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
 .skill-text-70 {
@@ -778,6 +809,7 @@ Timeline
 .number {
   position: absolute;
   top: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   margin-bottom: 0;
   background: var(--clr-primary-5);
@@ -795,6 +827,7 @@ Timeline
 }
 .timeline-item:nth-child(odd) .number {
   right: 0%;
+  -webkit-transform: translate(50%, -50%);
   transform: translate(50%, -50%);
 }
 
@@ -809,10 +842,13 @@ Blog
 .card {
   height: 27rem;
   position: relative;
+  -webkit-perspective: 1500px;
   perspective: 1500px;
 }
 .card-side {
+  -webkit-transition: all 2s linear;
   transition: all 2s linear;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   position: absolute;
   top: 0;
@@ -820,6 +856,8 @@ Blog
   width: 100%;
   height: 100%;
   border-radius: var(--radius);
+  -webkit-transform: translate3d(0, 0, 0);
+  visibility: visible;
 }
 
 .card-front {
@@ -827,14 +865,17 @@ Blog
 }
 .card-back {
   background: var(--clr-primary-10);
+  -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
   display: grid;
   place-items: center;
 }
 .card:hover .card-front {
+  -webkit-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
 }
 .card:hover .card-back {
+  -webkit-transform: rotateY(0);
   transform: rotateY(0);
 }
 .card-info {
@@ -842,6 +883,7 @@ Blog
 }
 .card-front img {
   height: 13rem;
+  -o-object-fit: cover;
   object-fit: cover;
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
@@ -849,11 +891,13 @@ Blog
 .card-footer {
   display: grid;
   grid-template-columns: auto 1fr;
+  -webkit-box-align: center;
   align-items: center;
 }
 .card-footer img {
   width: 2rem;
   height: 2rem;
+  -o-object-fit: cover;
   object-fit: cover;
   border-radius: 50%;
 }
@@ -911,6 +955,7 @@ Single Page
 .page-info a {
   text-transform: uppercase;
   color: var(--clr-primary-5);
+  -webkit-transition: var(--transition);
   transition: var(--transition);
 }
 .page-info a:hover {
@@ -922,3 +967,67 @@ Single Page
 Products Page
 ===============
 */
+.projects-hero {
+  height: 40vh;
+  background: var(--clr-primary-10);
+  display: grid;
+  place-items: center;
+}
+
+.projects-hero .section-title {
+  margin-bottom: 0;
+}
+.single-project {
+  background: var(--clr-grey-10);
+  border-radius: var(--radius);
+}
+
+.project-container img {
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+}
+.project-container {
+  position: relative;
+}
+.project-icon {
+  position: absolute;
+  font-size: 1.75rem;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 50%);
+  transform: translate(-50%, 50%);
+  width: 4rem;
+  height: 4rem;
+  display: grid;
+  place-items: center;
+  background: var(--clr-primary-5);
+  border-radius: 50%;
+  color: var(--clr-primary-1);
+  border: 0.375rem solid var(--clr-grey-10);
+}
+
+.project-details {
+  padding: 2rem 1.5rem;
+}
+.project-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  color: var(--clr-primary-5);
+}
+
+.project-footer a {
+  color: var(--clr-primary-5);
+  text-transform: capitalize;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+  justify-self: end;
+}
+
+.project-footer a:hover {
+  color: var(--clr-primary-1);
+}
+.projects-page-center {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  gap: 3rem 1rem;
+}
